--- a/Udemy/Maddo/Web_services_PHP_JSON_Mobile/app/EstudoDeCasoListar/app/build.gradle
+++ b/Udemy/Maddo/Web_services_PHP_JSON_Mobile/app/EstudoDeCasoListar/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId 'io.github.miguelnunorosa.estudodecasolistar'
+        applicationId 'foo.fd.estudodecasolistar'
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
