--- a/Udemy/Maddo/Web_services_PHP_JSON_Mobile/app/EstudoDeCasoListar/app/src/main/AndroidManifest.xml
+++ b/Udemy/Maddo/Web_services_PHP_JSON_Mobile/app/EstudoDeCasoListar/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="foo.fd.estudodecasoincluir">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -9,10 +10,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
         <activity
-            android:name=".view.MainActivity"
+            android:name="foo.fd.estudodecasoincluir.view.IncluirActivity"
+            android:label="@string/title_activity_incluir"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name="foo.fd.estudodecasoincluir.view.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
